Fix literature processing UI
